--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
-    <title>My Website</title>
+    <title>Jayce Leathers</title>
 	
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link href="css/cover.css" rel="stylesheet">
@@ -27,32 +27,38 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Contact</a></li>
+                  <li><a href="development.html">Development</a></li>
+                  <li><a href="design.html">Design</a></li>
+                  <li><a href="art.html">Art</a></li>
+                  <li><a href="writing.html">Writing</a></li>
+                  <li><a href="about.html">About</a></li>
                 </ul>
               </nav>
             </div>
-          </div>
+          </div> <!-- End masthead clearfix-->
 
-          <div class="inner cover">
-            <h1 class="cover-heading">Coder, Designer, Maker</h1>
-            <p class="lead">Currently enrolled at Vassar College in Poughkeepsie, NY. I'm a builder. I love creating good things. Software, pictures, stories, anything. I'm passionate about working on projects that help people.</p>
+          <div class="inner-cover">
+              <p class="inner-left">Coder,<br> Designer,<br> Maker</p>
+              <p class="inner-right">Currently enrolled at Vassar College in Poughkeepsie, NY. <br> I love creating good things. Application, pictures, stories. <br>I'm passionate about working on projects that help people.</p>
+            <!--
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
             </p>
-          </div>
+            -->
+				
+          </div> <!--End inner cover -->
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+              <p>Copyright Jayce Rudig-Leathers 2015</p>
             </div>
-          </div>
+          </div> <!-- end mastfoot-->
 
-        </div>
+        </div> <!--End cover container-->
 
-      </div>
+      </div> <!--End site wrapper inner-->
 
-    </div>
+    </div> <!--End site wrapper-->
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
