--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
           <div class="inner-cover">
               <p class="inner-left">Coder,<br> Designer,<br> Maker</p>
-              <p class="inner-right">Currently enrolled at Vassar College in Poughkeepsie, NY. <br> I love creating good things. Application, pictures, stories. <br>I'm passionate about working on projects that help people.</p>
+              <p class="inner-right">Currently enrolled at Vassar College in Poughkeepsie, NY. <br> I love creating good things. Applications, pictures, stories. <br>I'm passionate about working on projects that help people.</p>
             <!--
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
