Adds portfolio pages

--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
     <title>Jayce Leathers</title>
-	
+
 	<link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/cover.css" rel="stylesheet">
+	<link href="css/index.css" rel="stylesheet">
 	<script src="js/respond.min.js"></script>
 </head>
 
   <body>
     <div class="site-wrapper">
-
       <div class="site-wrapper-inner">
 
         <div class="cover-container">
@@ -27,11 +26,9 @@
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
-                  <li><a href="development.html">Development</a></li>
-                  <li><a href="design.html">Design</a></li>
-                  <li><a href="art.html">Art</a></li>
-                  <li><a href="writing.html">Writing</a></li>
+                  <li><a href="development.html">Portfolio</a></li>
                   <li><a href="about.html">About</a></li>
+                  <li><a href="about.html">Contact</a></li>
                 </ul>
               </nav>
             </div>
@@ -45,18 +42,34 @@
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
             </p>
             -->
-				
+
           </div> <!--End inner cover -->
 
+
+
+        </div> <!--End cover container-->
+
+      </div> <!--End site wrapper inner-->
+
+	  <div class="site-wrapper-inner">
+
+
+		<div class="About">
+			<div class="header">
+			  
+			</div>
+      <p>
+		  </div>
+	  </div>
+
+	  <div class="site-wrapper-inner">
+
+	  </div>
           <div class="mastfoot">
             <div class="inner">
               <p>Copyright Jayce Rudig-Leathers 2015</p>
             </div>
           </div> <!-- end mastfoot-->
-
-        </div> <!--End cover container-->
-
-      </div> <!--End site wrapper inner-->
 
     </div> <!--End site wrapper-->
 
