--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
 
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
+  <link href="css/about.css" rel="stylesheet">
   <script src="js/respond.min.js"></script>
 </head>
 
@@ -26,9 +27,9 @@
             <h3 class="masthead-brand">Jayce Rudig-Leathers</h3>
             <nav>
               <ul class="nav masthead-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="development.html">Portfolio</a></li>
-                <li><a href="about.html">About</a></li>
+                <li class="active"><a href="about.html">About</a></li>
                 <li><a href="about.html">Contact</a></li>
               </ul>
             </nav>
@@ -37,18 +38,12 @@
         <!-- End masthead clearfix-->
 
         <div class="inner-cover">
-          <p class="inner-left">Coder,
-            <br> Designer,
-            <br> Maker</p>
-          <p class="inner-right">Currently enrolled at Vassar College in Poughkeepsie, NY.
-            <br> I love creating good things. Applications, pictures, stories.
-            <br>I'm passionate about working on projects that help people.</p>
-          <!--
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+          <div class="about" >
+            <h1>Hi!</h1>
+            <p>
+              I'm a senior at Vassar College in Poughkeepsie NY.
             </p>
-            -->
-
+          </div>
         </div>
         <!--End inner cover -->
 
@@ -64,9 +59,7 @@
 
   </div>
   <div class="mastfoot">
-    <div class="inner">
-      <p>Copyright Jayce Rudig-Leathers 2015</p>
-    </div>
+    <p>Copyright Jayce Rudig-Leathers 2015</p>
   </div>
   <!-- end mastfoot-->
 
