--- a/about.html
+++ b/about.html
@@ -41,8 +41,10 @@
           <div class="about" >
             <h1>Hi!</h1>
             <p>
-              I'm a senior at Vassar College in Poughkeepsie NY.
-            </p>
+              I'm a senior at Vassar College in Poughkeepsie NY. I specialize in
+              Mobile Development and Design. I make GOOD things. Take a look at
+              my portfolio to see what I've made. Or get in touch with me below.</p>
+              <a class="button"href="contact.html">Contact Me</a>
           </div>
         </div>
         <!--End inner cover -->
