--- a/index.html
+++ b/index.html
@@ -17,50 +17,46 @@
 
 <body>
   <div class="site-wrapper">
-    <div class="site-wrapper-inner">
+    <h1 class="title"> Jayce Rudig-Leathers </h1>
+    <p class="title" id="wizard">
+      <i>tech wizard</i>
+    </p>
 
-      <div class="cover-container">
+    <!-- <div class="site-wrapper-inner">
+      <div class="cover-container"> -->
 
-        <div class="masthead clearfix">
-          <div class="inner">
-            <h3 class="masthead-brand">Jayce Rudig-Leathers</h3>
-            <nav>
-              <ul class="nav masthead-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="development.html">Portfolio</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="about.html">Contact</a></li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-        <!-- End masthead clearfix-->
+        <!-- <div class="inner-content">
+          <!<h1 class="title"> Jayce Rudig-Leathers </h1> -->
+          <!-- <p>Coder, Designer, Maker</p> -->
+          <!-- <p>Wizard
+          </p> -->
+          <!-- <ul class="links">
+              <li><a href="#">Code</a></li>
+              <li><a href="https://www.behance.net/jayce_leathers">Design</a></li>
+              <li><a href="#">Photography</a></li>
+              <li><a class="contact" href="#">Get In Touch</a></li>
+          </ul>
+          <a class="contact" href="#">Get In Touch</a>
 
-        <div class="inner-cover">
-          <p class="inner-left">Coder,
-            <br> Designer,
-            <br> Maker</p>
-          <p class="inner-right">Currently enrolled at Vassar College in Poughkeepsie, NY.
-            <br> I love creating good things. Applications, pictures, stories.
-            <br>I'm passionate about working on projects that help people.</p>
-          <!--
-            <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
-            </p>
-            -->
-
-        </div>
+        </div> -->
         <!--End inner cover -->
 
+        <!-- <div class="inner-content" id="contact-content">
+          <p> test </p>
+        </div> -->
 
-
-      </div>
+      <!-- </div> -->
       <!--End cover container-->
 
-    </div>
+    <!-- </div> -->
     <!--End site wrapper inner-->
   </div>
-
+  <ul class="links">
+      <li><a href="https://github.com/jayce-leathers" target="_blank">Code</a></li>
+      <li><a href="https://www.behance.net/jayce_leathers" target="_blank">Design</a></li>
+      <li><a href="https://www.flickr.com/photos/jayce_leathers/" target="_blank">Photography</a></li>
+      <li><a  href="mailto:jarudigleathers@vassar.edu?Subject=Hello%20" target="_blank">Contact</a></li>
+  </ul>
 
   </div>
   <div class="mastfoot">
