minor responsive fix

--- a/index.html
+++ b/index.html
@@ -17,39 +17,11 @@
 
 <body>
   <div class="site-wrapper">
-    <h1 class="title"> Jayce Rudig-Leathers </h1>
+    <h1 class="title"> Jayce <br class="namebreak" />Rudig Leathers </h1>
     <p class="title" id="wizard">
       <i>tech wizard</i>
     </p>
 
-    <!-- <div class="site-wrapper-inner">
-      <div class="cover-container"> -->
-
-        <!-- <div class="inner-content">
-          <!<h1 class="title"> Jayce Rudig-Leathers </h1> -->
-          <!-- <p>Coder, Designer, Maker</p> -->
-          <!-- <p>Wizard
-          </p> -->
-          <!-- <ul class="links">
-              <li><a href="#">Code</a></li>
-              <li><a href="https://www.behance.net/jayce_leathers">Design</a></li>
-              <li><a href="#">Photography</a></li>
-              <li><a class="contact" href="#">Get In Touch</a></li>
-          </ul>
-          <a class="contact" href="#">Get In Touch</a>
-
-        </div> -->
-        <!--End inner cover -->
-
-        <!-- <div class="inner-content" id="contact-content">
-          <p> test </p>
-        </div> -->
-
-      <!-- </div> -->
-      <!--End cover container-->
-
-    <!-- </div> -->
-    <!--End site wrapper inner-->
   </div>
   <ul class="links">
       <li><a href="https://github.com/jayce-leathers" target="_blank">Code</a></li>
