adds linkedin link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><a href="https://github.com/jayce-leathers" target="_blank">Code</a></li>
       <li><a href="https://www.behance.net/jayce_leathers" target="_blank">Design</a></li>
       <li><a href="https://www.flickr.com/photos/jayce_leathers/" target="_blank">Photography</a></li>
+      <li><a href="https://www.linkedin.com/in/jayceleathers" target="_blank">Connect</a></li>
       <li><a  href="mailto:jarudigleathers@vassar.edu?Subject=Hello%20" target="_blank">Contact</a></li>
   </ul>
 
