--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="site-wrapper">
     <h1 class="title"> Jayce <br class="namebreak" />Rudig Leathers </h1>
     <p class="title" id="wizard">
-      <i>tech wizard</i>
+      <i>Animated Banner</i>
     </p>
 
   </div>
