--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
   <div class="site-wrapper">
     <h1 class="title"> Jayce <br class="namebreak" />Rudig Leathers </h1>
-    <p class="title" id="wizard">
-      <i>Animated Banner</i>
+    <p class="title" id="animated_banner">
+      Animated Banner
     </p>
 
   </div>
@@ -50,6 +50,7 @@
   <script src="../../assets/js/docs.min.js"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  <script src="js/animation.js"></script>
 
 </body>
 
