adds layout change to vertical center

--- a/index.html
+++ b/index.html
@@ -17,33 +17,30 @@
 
 <body>
   <div class="site-wrapper">
-    <div class="left">
+
     <h1 class="title"> Jayce <br class="namebreak" />Rudig Leathers </h1>
-    <p class="title" id="animated_banner">
+    <!-- <p class="title" id="animated_banner">
       Animated Banner
-    </p>
+    </p> -->
+
+    <div class="logo">
+      <img src="img/logo.gif"alt="Logo" style="width:400px;height:500px;"/>
+    </div>
+    <ul class="links">
+        <li><a href="https://github.com/jayce-leathers" target="_blank">Code</a></li>
+        <li><a href="https://www.behance.net/jayce_leathers" target="_blank">Design</a></li>
+        <li><a href="https://www.flickr.com/photos/jayce_leathers/" target="_blank">Photography</a></li>
+        <li><a href="https://www.linkedin.com/in/jayceleathers" target="_blank">Connect</a></li>
+        <li><a  href="mailto:jarudigleathers@vassar.edu?Subject=Hello%20" target="_blank">Contact</a></li>
+    </ul>
   </div>
-  <div class="logo">
-    <img src="img/logo.gif"alt="Logo" style="width:400px;height:500px;"/>
-  </div>
-  </div>
-  </div>
-  <ul class="links">
-      <li><a href="https://github.com/jayce-leathers" target="_blank">Code</a></li>
-      <li><a href="https://www.behance.net/jayce_leathers" target="_blank">Design</a></li>
-      <li><a href="https://www.flickr.com/photos/jayce_leathers/" target="_blank">Photography</a></li>
-      <li><a href="https://www.linkedin.com/in/jayceleathers" target="_blank">Connect</a></li>
-      <li><a  href="mailto:jarudigleathers@vassar.edu?Subject=Hello%20" target="_blank">Contact</a></li>
-  </ul>
 
   </div>
+  <!-- end mastfoot-->
   <div class="mastfoot">
     <div class="inner">
       <p>Copyright Jayce Rudig-Leathers 2015</p>
     </div>
-  </div>
-  <!-- end mastfoot-->
-
   </div>
   <!--End site wrapper-->
   <!-- Bootstrap core JavaScript
