--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html>
 
 <head>
- <meta name="google-site-verification" content="Zb47WfFHFTJ_SNpwHR63NtDBXCeqeE7DGJfwgimxcko" /> 
+ <meta name="google-site-verification" content="Zb47WfFHFTJ_SNpwHR63NtDBXCeqeE7DGJfwgimxcko" />
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
+  <link rel="icon" href="assets/favicon.ico">
   <title>Jayce Leathers</title>
-
-  <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
+  <link href="css/social-icons.css" rel="stylesheet">
   <script src="js/respond.min.js"></script>
 </head>
 
@@ -20,29 +19,30 @@
   <div class="site-wrapper">
 
     <h1 class="title"> Jayce <br class="namebreak" />Rudig Leathers </h1>
-    <!-- <p class="title" id="animated_banner">
-      Animated Banner
-    </p> -->
 
     <div class="logo">
-      <img src="img/logo.gif"alt="Logo" style="width:400px;height:500px;"/>
+      <p class="logo-image" align="center">
+      <img src="img/logo.gif" alt="Logo"/>
+      </p>
     </div>
+
     <ul class="links">
-        <li><a href="https://github.com/jayce-leathers" target="_blank">Code</a></li>
-        <li><a href="https://www.behance.net/jayce_leathers" target="_blank">Design</a></li>
-        <li><a href="https://www.flickr.com/photos/jayce_leathers/" target="_blank">Photography</a></li>
-        <li><a href="https://www.linkedin.com/in/jayceleathers" target="_blank">Connect</a></li>
-        <li><a  href="mailto:jarudigleathers@vassar.edu?Subject=Hello%20" target="_blank">Contact</a></li>
+        <li><a class="icon-github" href="https://github.com/jayce-leathers" target="_blank">Code</a></li>
+        <li><a class="icon-ello" href="https://www.ello.co/jayceleathers" target="_blank">Art</a></li>
+        <li><a class="icon-behance" href="https://www.behance.net/jayce_leathers" target="_blank">Design</a></li>
+        <li><a class="icon-flikr" href="https://www.flickr.com/photos/jayce_leathers/" target="_blank">Photography</a></li>
+        <li><a class="icon-linkedin" href="https://www.linkedin.com/in/jayceleathers" target="_blank">Connect</a></li>
+        <li><a class="icon-mail" href="mailto:jarudigleathers@vassar.edu?Subject=Hello%20" target="_blank">Contact</a></li>
     </ul>
   </div>
 
   </div>
   <!-- end mastfoot-->
-  <div class="mastfoot">
+  <!-- <div class="mastfoot">
     <div class="inner">
       <p>Copyright Jayce Rudig-Leathers 2015</p>
     </div>
-  </div>
+  </div> -->
   <!--End site wrapper-->
   <!-- Bootstrap core JavaScript
     ================================================== -->
