logo correctly resizes

--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
   <div class="site-wrapper">
 
     <h1 class="title"> Jayce <br class="namebreak" />Rudig Leathers </h1>
+    <p align="center">
+      <img class="logo" src="img/logo.gif" alt="Logo"/>
+    </p>
 
-    <div class="logo">
-      <p class="logo-image" align="center">
-      <img src="img/logo.gif" alt="Logo"/>
-      </p>
-    </div>
 
     <ul class="links">
         <li><a class="icon-github" href="https://github.com/jayce-leathers" target="_blank">Code</a></li>
