--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
 
 
     <ul class="links">
-        <li><a class="icon-github" href="https://github.com/jayce-leathers" target="_blank">Code</a></li>
-        <li><a class="icon-ello" href="https://www.ello.co/jayceleathers" target="_blank">Art</a></li>
-        <li><a class="icon-behance" href="https://www.behance.net/jayce_leathers" target="_blank">Design</a></li>
-        <li><a class="icon-flikr" href="https://www.flickr.com/photos/jayce_leathers/" target="_blank">Photography</a></li>
-        <li><a class="icon-linkedin" href="https://www.linkedin.com/in/jayceleathers" target="_blank">Connect</a></li>
-        <li><a class="icon-mail" href="mailto:jarudigleathers@vassar.edu?Subject=Hello%20" target="_blank">Contact</a></li>
+        <li><a class="icon-github" id="red" href="https://github.com/jayce-leathers">Code</a></li>
+        <li><a class="icon-ello" id="green" href="https://www.ello.co/jayceleathers">Art</a></li>
+        <li><a class="icon-behance" id="blue" href="https://www.behance.net/jayce_leathers">Design</a></li>
+        <li><a class="icon-flikr"  id="orange" href="https://www.flickr.com/photos/jayce_leathers/">Photography</a></li>
+        <li><a class="icon-linkedin" id="violet" href="https://www.linkedin.com/in/jayceleathers">Connect</a></li>
+        <li><a class="icon-mail"  id="yellow" href="mailto:jarudigleathers@vassar.edu?Subject=Hello%20">Contact</a></li>
     </ul>
+
   </div>
 
   </div>
