--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><a class="icon-behance" id="blue" href="https://www.behance.net/jayce_leathers">Design</a></li>
         <li><a class="icon-flikr"  id="orange" href="https://www.flickr.com/photos/jayce_leathers/">Photography</a></li>
         <li><a class="icon-linkedin" id="violet" href="https://www.linkedin.com/in/jayceleathers">Connect</a></li>
-        <li><a class="icon-mail"  id="yellow" href="mailto:jarudigleathers@vassar.edu?Subject=Hello%20">Contact</a></li>
+        <li><a class="icon-mail"  id="yellow" href="mailto:contact@jayceleathers.me?Subject=Hello%20">Contact</a></li>
     </ul>
 
   </div>
