--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="http://jayceleathers.me/img/logo.gif"
-  <meta name="og:description" content="test description">
+  <meta property="og:description" content="test description">
   <meta name="author" content="">
   <link rel="icon" href="assets/favicon.ico">
   <title>Jayce Leathers</title>
