--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
-<html prefix="og: http://ogp.me/ns#" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en">
+<html prefix="og: http://ogp.me/ns#">
 
 <head>
  <meta name="google-site-verification" content="Zb47WfFHFTJ_SNpwHR63NtDBXCeqeE7DGJfwgimxcko" />
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:image" content="http://jayceleathers.me/img/logo.gif"
-  <meta property="og:description" content="test description">
+  <meta property="og:image" content="http://jayceleathers.me/img/logo.png"
+  <meta property="og:description" content="The personal site of Jayce Rudig Leathers">
   <meta name="author" content="">
   <link rel="icon" href="assets/favicon.ico">
   <title>Jayce Leathers</title>
