--- a/index.html
+++ b/index.html
@@ -11,27 +11,95 @@
   <meta name="author" content="">
   <link rel="icon" href="assets/favicon.ico">
   <title>Jayce Leathers</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="css/index.css" rel="stylesheet">
-  <link href="css/social-icons.css" rel="stylesheet">
+  <link href="css/social-icons.css" rel="stylesheet"
   <script src="js/respond.min.js"></script>
 </head>
 
 <body>
-  <div class="site-wrapper">
+  <div class="container-fluid">
+    <div id="text-center">
+      <h1 class="title text-center"> Jayce <br class="namebreak" />Rudig Leathers </h1>
 
-    <h1 class="title"> Jayce <br class="namebreak" />Rudig Leathers </h1>
-    <p align="center">
-      <img class="logo" src="img/logo.gif" alt="Logo"/>
-    </p>
+        <img class="logo img-responsive center-block" src="img/logo.gif" alt="Logo"/>
+
+    </div>
 
 
-    <ul class="links">
+
+
+    <h1 class="text-center"> My Story </h1>
+    <p class="text-center">
+      I'm a creative technologist living in the Hudson Valley.I’ve worked to enable
+      critical communication with Beartooth and founded a community of tech creators at
+      Vassar. I have a BA in computer science with a focus in art and writing.
+     </p>
+
+    <h1 class="text-center">Recent Projects</h1>
+    <div class="row">
+      <div class="col-md-4 portfolio-item"
+        <a href="#">
+          <img class="img-responsive app-icon" src="http://placehold.it/700x400" alt="">
+        </a>
+        <h3>
+          Project Title
+        </h3>
+        <p>
+          Project description text
+        </p>
+        <a href="#"> https://github.com </a>
+      </div>
+      <div class="col-md-4 portfolio-item"
+        <a href="#">
+          <img class="img-responsive app-icon" src="http://placehold.it/700x400" alt="">
+        </a>
+        <h3>
+          Project Title
+        </h3>
+        <p>
+          Project description text
+        </p>
+        <a href="#"> https://github.com </a>
+      </div>
+      <div class="col-md-4 portfolio-item"
+        <a href="#">
+          <img class="img-responsive app-icon" src="http://placehold.it/700x400" alt="">
+        </a>
+        <h3>
+          Project Title
+        </h3>
+        <p>
+          Project description text
+        </p>
+        <a href="#"> https://github.com </a>
+      </div>
+    </div>
+
+    <h1 class="text-center"> I'm available for contract and freelance work. Drop
+      me a line below. </h1>
+
+    <form class="well">
+    	<div class="form-group"> <!-- Message input !-->
+    		<label class="control-label " for="name_id">Name</label>
+        <input type="email" class="form-control" id="name_id" name="name_name" placeholder="John Smith">
+    		<label class="control-label " for="email_id">Email</label>
+        <input type="email" class="form-control" id="email_id" name="email_name" placeholder="name@domain.com">
+    		<label class="control-label " for="message_id">Message</label>
+    		<textarea class="form-control" id="message_id" name="message" rows="5"></textarea>
+    	</div>
+
+    	<div class="form-group"> <!-- Submit button !-->
+    		<button class="btn btn-primary " name="submit" type="submit">Submit</button>
+    	</div>
+  </form>
+
+    <ul class="links text-center">
         <li><a class="icon-github" id="red" href="https://github.com/jayce-leathers">Code</a></li>
         <li><a class="icon-ello" id="green" href="https://www.ello.co/jayceleathers">Art</a></li>
         <li><a class="icon-behance" id="blue" href="https://www.behance.net/jayce_leathers">Design</a></li>
         <li><a class="icon-flikr"  id="orange" href="https://www.flickr.com/photos/jayce_leathers/">Photography</a></li>
         <li><a class="icon-linkedin" id="violet" href="https://www.linkedin.com/in/jayceleathers">Connect</a></li>
-        <li><a class="icon-mail"  id="yellow" href="mailto:contact@jayceleathers.me?Subject=Hello%20">Contact</a></li>
     </ul>
 
   </div>
