--- a/index.html
+++ b/index.html
@@ -19,80 +19,108 @@
 
 <body>
   <div class="container-fluid">
-    <div id="text-center">
-      <h1 class="title text-center"> Jayce <br class="namebreak" />Rudig Leathers </h1>
-
-        <img class="logo img-responsive center-block" src="img/logo.gif" alt="Logo"/>
-
-    </div>
-
-
-
-
-    <h1 class="text-center"> My Story </h1>
-    <p class="text-center">
-      I'm a creative technologist living in the Hudson Valley.I’ve worked to enable
-      critical communication with Beartooth and founded a community of tech creators at
-      Vassar. I have a BA in computer science with a focus in art and writing.
-     </p>
-
-    <h1 class="text-center">Recent Projects</h1>
     <div class="row">
-      <div class="col-md-4 portfolio-item"
-        <a href="#">
-          <img class="img-responsive app-icon" src="http://placehold.it/700x400" alt="">
-        </a>
-        <h3>
-          Project Title
-        </h3>
-        <p>
-          Project description text
-        </p>
-        <a href="#"> https://github.com </a>
-      </div>
-      <div class="col-md-4 portfolio-item"
-        <a href="#">
-          <img class="img-responsive app-icon" src="http://placehold.it/700x400" alt="">
-        </a>
-        <h3>
-          Project Title
-        </h3>
-        <p>
-          Project description text
-        </p>
-        <a href="#"> https://github.com </a>
-      </div>
-      <div class="col-md-4 portfolio-item"
-        <a href="#">
-          <img class="img-responsive app-icon" src="http://placehold.it/700x400" alt="">
-        </a>
-        <h3>
-          Project Title
-        </h3>
-        <p>
-          Project description text
-        </p>
-        <a href="#"> https://github.com </a>
+      <div class="col-md-8 col-md-offset-2">
+        <div id="text-center">
+          <h1 class="title text-center"> Jayce <br class="namebreak" />Rudig Leathers </h1>
+
+            <img class="logo img-responsive center-block" src="img/logo.gif" alt="Logo"/>
+
+        </div>
       </div>
     </div>
 
-    <h1 class="text-center"> I'm available for contract and freelance work. Drop
-      me a line below. </h1>
 
-    <form class="well">
-    	<div class="form-group"> <!-- Message input !-->
-    		<label class="control-label " for="name_id">Name</label>
-        <input type="email" class="form-control" id="name_id" name="name_name" placeholder="John Smith">
-    		<label class="control-label " for="email_id">Email</label>
-        <input type="email" class="form-control" id="email_id" name="email_name" placeholder="name@domain.com">
-    		<label class="control-label " for="message_id">Message</label>
-    		<textarea class="form-control" id="message_id" name="message" rows="5"></textarea>
-    	</div>
 
-    	<div class="form-group"> <!-- Submit button !-->
-    		<button class="btn btn-primary " name="submit" type="submit">Submit</button>
-    	</div>
-  </form>
+
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <h1 class="text-center"> My Story </h1>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <p class="text-center">
+          I'm a creative technologist living in the Hudson Valley.I’ve worked to enable
+          critical communication with Beartooth and founded a community of tech creators at
+          Vassar. I have a BA in computer science with a focus in art and writing.
+         </p>
+      </div>
+    </div>
+
+     <div class="row">
+       <div class="col-md-8 col-md-offset-2">
+
+       </div>
+     </div>
+    <!-- <h1 class="text-center">Recent Projects</h1> -->
+    <!-- <div class="row">
+      <div class="col-md-4 portfolio-item"
+        <a href="#">
+          <img class="img-responsive app-icon" src="http://placehold.it/700x400" alt="">
+        </a>
+        <h3>
+          Project Title
+        </h3>
+        <p>
+          Project description text
+        </p>
+        <a href="#"> https://github.com </a>
+      </div>
+
+      <div class="col-md-4 portfolio-item"
+        <a href="#">
+          <img class="img-responsive app-icon" src="http://placehold.it/700x400" alt="">
+        </a>
+        <h3>
+          Project Title
+        </h3>
+        <p>
+          Project description text
+        </p>
+        <a href="#"> https://github.com </a>
+      </div>
+      <div class="col-md-4 portfolio-item"
+        <a href="#">
+          <img class="img-responsive app-icon" src="http://placehold.it/700x400" alt="">
+        </a>
+        <h3>
+          Project Title
+        </h3>
+        <p>
+          Project description text
+        </p>
+        <a href="#"> https://github.com </a>
+      </div>
+    </div> -->
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <h1 class="text-center"> I'm available for contract and freelance work. Drop
+          me a line below. </h1>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <form class="well" action="https://formspree.io/contact@jayceleathers.me" method="POST">
+        	<div class="form-group"> <!-- Message input !-->
+        		<label class="control-label " for="name_id">Name</label>
+            <input type="text" class="form-control" id="name_id" name="name" placeholder="John Smith">
+        		<label class="control-label " for="email_id">Email</label>
+            <input type="email" class="form-control" id="email_id" name="_replyto" placeholder="name@domain.com">
+        		<label class="control-label " for="message_id">Message</label>
+        		<textarea class="form-control" id="message_id" name="message" rows="5"></textarea>
+            <!-- <input type="submit" value="Send"> -->
+        	</div>
+
+        	<div class="form-group"> <!-- Submit button !-->
+        		<button class="btn btn-primary " name="submit" type="submit" value="Send">Submit</button>
+        	</div>
+      </form>
+    </div>
+  </div>
 
     <ul class="links text-center">
         <li><a class="icon-github" id="red" href="https://github.com/jayce-leathers">Code</a></li>
