--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:image" content="http://jayceleathers.me/img/logo.png"
-  <meta property="og:description" content="The personal site of Jayce Rudig Leathers">
+  <meta property="og:description" content="The personal site of Tulsi Rudig Leathers">
   <meta name="author" content="">
   <link rel="icon" href="assets/favicon.ico">
-  <title>Jayce Leathers</title>
+  <title>Tulsi Leathers</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link href="css/index.css" rel="stylesheet">
   <link href="css/social-icons.css" rel="stylesheet"
@@ -22,7 +22,7 @@
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <div id="text-center">
-          <h1 class="title text-center"> Jayce <br class="namebreak" />Rudig Leathers </h1>
+          <h1 class="title text-center"> Tulsi <br class="namebreak" />Rudig Leathers </h1>
 
             <img class="logo img-responsive center-block" src="img/logo.gif" alt="Logo"/>
 
@@ -136,7 +136,7 @@
   <!-- end mastfoot-->
   <!-- <div class="mastfoot">
     <div class="inner">
-      <p>Copyright Jayce Rudig-Leathers 2015</p>
+      <p>Copyright Tulsi Rudig-Leathers 2015</p>
     </div>
   </div> -->
   <!--End site wrapper-->
