--- a/index.html
+++ b/index.html
@@ -123,11 +123,8 @@
   </div>
 
     <ul class="links text-center">
-        <li><a class="icon-github" id="red" href="https://github.com/jayce-leathers">Code</a></li>
-        <li><a class="icon-ello" id="green" href="https://www.ello.co/jayceleathers">Art</a></li>
-        <li><a class="icon-behance" id="blue" href="https://www.behance.net/jayce_leathers">Design</a></li>
-        <li><a class="icon-flikr"  id="orange" href="https://www.flickr.com/photos/jayce_leathers/">Photography</a></li>
-        <li><a class="icon-linkedin" id="violet" href="https://www.linkedin.com/in/jayceleathers">Connect</a></li>
+        <li><a class="icon-github" id="red" href="https://github.com/tulsileathers">Code</a></li>
+        <li><a class="icon-ello" id="green" href="https://www.ello.co/tulsileathers">Art</a></li>
     </ul>
 
   </div>
